upgrade docusaurus, render role chart in browser only
Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

--- a/docs/4_the-formal-stuff/2_career-development/3_engineering.mdx
+++ b/docs/4_the-formal-stuff/2_career-development/3_engineering.mdx
@@ -68,6 +68,6 @@ sidebar_position: 3
 ## Compare
 
 
-import EngLadderGraph from "../../../src/components/EngLadderGraph"
+import EngLadderGraph from "@site/src/components/EngLadderGraph"
 
 <EngLadderGraph type="engineer"></EngLadderGraph>
