--- a/docs/4_the-formal-stuff/2_career-development/4_engineering-management.mdx
+++ b/docs/4_the-formal-stuff/2_career-development/4_engineering-management.mdx
@@ -41,6 +41,6 @@ sidebar_position: 4
 ## Compare
 
 
-import EngLadderGraph from "../../../src/components/EngLadderGraph"
+import EngLadderGraph from "@site/src/components/EngLadderGraph"
 
 <EngLadderGraph type="engineer_management"></EngLadderGraph>
