--- a/docs/4_the-formal-stuff/2_career-development/5_research.mdx
+++ b/docs/4_the-formal-stuff/2_career-development/5_research.mdx
@@ -69,6 +69,6 @@ sidebar_position: 5
 ## Compare
 
 
-import EngLadderGraph from "../../../src/components/EngLadderGraph"
+import EngLadderGraph from "@site/src/components/EngLadderGraph"
 
 <EngLadderGraph type="researcher"></EngLadderGraph>
