feat: dynimic eng ladders diagram + upgrade to docusarus v3 (#111)
* feat: dynimic eng ladders diagram

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* fix spellcheck

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* upgrade docusaurus, render role chart in browser only

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* fix colors

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* bump node version

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* remove typecheck, not really useful as it collides with docusarus

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* bump typescvript version

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* small ux change

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>

* pr suggestion

Co-authored-by: Belma Gutlic <belma.dzi@gmail.com>

---------

Signed-off-by: Marin Petrunic <marin.petrunic@gmail.com>
Co-authored-by: Belma Gutlic <belma.dzi@gmail.com>

--- a/docs/4_the-formal-stuff/2_career-development/3_engineering.mdx
+++ b/docs/4_the-formal-stuff/2_career-development/3_engineering.mdx
@@ -64,3 +64,10 @@ sidebar_position: 3
 ![assets/05.distinguished-se.jpg](assets/05.distinguished-se.jpg)
 
 ---
+
+## Compare
+
+
+import EngLadderGraph from "@site/src/components/EngLadderGraph"
+
+<EngLadderGraph type="engineer"></EngLadderGraph>
