--- a/docs/4_the-formal-stuff/2_career-development/5_research.mdx
+++ b/docs/4_the-formal-stuff/2_career-development/5_research.mdx
@@ -64,3 +64,11 @@ sidebar_position: 5
 ![assets/05.distinguished-se-rnd.jpg](assets/05.distinguished-se-rnd.jpg)
 
 ---
+
+
+## Compare
+
+
+import EngLadderGraph from "@site/src/components/EngLadderGraph"
+
+<EngLadderGraph type="researcher"></EngLadderGraph>
